# jeTT

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  Modelfile  PKGBUILD  README.md  ROADMAP.md  SECURITY.md  STATUS.md  TRAINING.md  build_r6plus_dataset.py  convert_intelligence.py  convert_knowledge_base.py  download_intelligence.py  eval_guard.py  generate_allow_dataset.py  generate_ambiguous_pairs.py  generate_eval_reinforce.py  generate_false_positive_armor.py  generate_own_stack.py  generate_supply_chain.py  generate_threats.py  generate_training_data.py  install.sh  jett  jett-control.sh  jett-daemon.service  jett_generate_training_data.py  jett_training_data.json  merge.py  merge_final.py  merge_r3.py  mutate_matrix.py  test_jett_brain.py  test_training_pipeline.py  train_core_weights.py
bpf/: jett_sensor.bpf.c
cmd/agent/: Cargo.toml
cmd/agent/src/: main.rs
config/: allowlist.example.conf  model.sha256.example
coverage/: zero_gate.py
docs/: ART.md  DECEPTION-ARCHITECTURE.md  DESIGN_DECISIONS.md  EBPF.md  EBPF_LSM_ROADMAP.md  MACHINE_CONFIG.md  PLUGIN_SDK.md  RELEASE_v0.1.0.md  jeTT-eBPF-Integration-Plan-v2.md
scripts/: art_jett_smoke.sh  benchmark_guard.py  build_bpf.sh  build_release.sh  create_github_release.sh  deploy_r6.sh  deploy_walkthrough.sh  enforce_smoke.sh  export_gguf.py  export_gguf_from_clean.sh  export_gguf_pod.sh  harvest_learn_log.py  install_allowlist.sh  jett-ctl.sh  jett_redteam.sh  pin_model.sh  post_install_smoke.sh  post_r9_workflow.sh  run_adversarial_eval.sh  run_eval_models.sh  run_r6plus_pipeline.sh  run_round10_pipeline.sh  (+24 more)
src/: lib.rs  (+18 more)
(+39 files in other folders)
