[package]
name = "jeTT"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["llama-cpp-2/cuda"]
ebpf = ["dep:libbpf-rs", "dep:crossbeam-channel"]

[dependencies]
llama-cpp-2 = { version = "0.1", default-features = false }
sha2 = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libbpf-rs = { version = "0.24", optional = true }
crossbeam-channel = { version = "0.5", optional = true }

[[bin]]
name = "jett-daemon"
path = "src/bin/daemon.rs"
